@@ -108,7 +108,7 @@ use warnings;
 use 5.014;
 use utf8;
 
-our $VERSION = '3.13';
+our $VERSION = '3.14';
 
 # Most of these have been adapted from
 # <https://github.com/public-transport/transport-apis> and
