@@ -1,3 +1,7 @@
+Travel::Status::DE::VRR 3.14 - Mon Jul 14 2025
+
+    * Fix handling of stops with just a single departure
+
 Travel::Status::DE::VRR 3.13 - Thu Jun 19 2025
 
     * EFA->new_p: Return $self in case of error so that clients can access
